# uninvited

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  scenarios.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: bench_kv.rs  headless.rs
src-tauri/icons/: icon.af  icon.icns
src-tauri/src/: agents.rs  brains.rs  commands.rs  game.rs  inference.rs  lib.rs  main.rs  orchestrator.rs  scenarios.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  anim.ts  styles.css  types.ts  useGame.ts
web/src/components/: ConfigScreen.tsx  GameView.tsx  ResultScreen.tsx  StartupGate.tsx
